# github_activity_tracker

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: di_compositor.py  options.py
app/api/controllers/: github_controller.py  github_controller_abc.py
app/domains/: domain_result.py
app/domains/github_event/: models.py
app/domains/github_event/services/: github_event_service.py  github_event_service_abc.py
app/infrastructure/: models.py
app/lifespan_manager/: lifespan_manager.py  lifespan_manager_abc.py
tests/: base_test_case.py  base_test_case_abc.py
tests/github_event_tests/: github_event_service_test_case.py
